WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212516
[WebXR] WebXRSystem::unregisterSimulatedXRDeviceForTesting() ASSERTs in m_immersiveDevices.contains(device)
https://bugs.webkit.org/show_bug.cgi?id=212516
Summary
[WebXR] WebXRSystem::unregisterSimulatedXRDeviceForTesting() ASSERTs in m_imm...
Sergio Villar Senin
Reported
2020-05-29 03:00:31 PDT
[WebXR] WebXRSystem::unregisterSimulatedXRDeviceForTesting() ASSERTs in m_immersiveDevices.contains(device)
Attachments
Patch
(3.76 KB, patch)
2020-05-29 03:04 PDT
,
Sergio Villar Senin
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2020-05-29 03:04:58 PDT
Created
attachment 400562
[details]
Patch
Zan Dobersek
Comment 2
2020-05-29 03:24:10 PDT
Comment on
attachment 400562
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=400562&action=review
> Source/WebCore/Modules/webxr/WebXRSystem.cpp:457 > + UNUSED_VARIABLE(removed); > + ASSERT(removed || m_inlineXRDevice == &device);
Can be folded into ASSERT_UNUSED.
Sergio Villar Senin
Comment 3
2020-05-29 06:18:13 PDT
Committed
r262291
: <
https://trac.webkit.org/changeset/262291
>
Radar WebKit Bug Importer
Comment 4
2020-05-29 06:19:17 PDT
<
rdar://problem/63757315
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug